@@ -40,8 +40,9 @@ class DBConnection : public core::internal::CDBConnection<NativeConnection, Conf
   typedef core::internal::CDBConnection<NativeConnection, Config, FORESTDB> base_class;
   explicit DBConnection(CDBConnectionClient* client);
 
-  std::string GetCurrentDBName() const;
+  virtual std::string GetCurrentDBName() const override;
   common::Error Info(const std::string& args, ServerInfo::Stats* statsout) WARN_UNUSED_RESULT;
+  common::Error ConfigGetDatabases(std::vector<std::string>* dbs) WARN_UNUSED_RESULT;
 
  private:
   common::Error CheckResultCommand(const std::string& cmd, fdb_status err) WARN_UNUSED_RESULT;
@@ -61,6 +62,8 @@ class DBConnection : public core::internal::CDBConnection<NativeConnection, Conf
                                  std::vector<std::string>* ret) override;
   virtual common::Error DBkcountImpl(size_t* size) override;
   virtual common::Error FlushDBImpl() override;
+  virtual common::Error CreateDBImpl(const std::string& name, IDataBaseInfo** info) override;
+  virtual common::Error RemoveDBImpl(const std::string& name, IDataBaseInfo** info) override;
   virtual common::Error SelectImpl(const std::string& name, IDataBaseInfo** info) override;
   virtual common::Error SetImpl(const NDbKValue& key, NDbKValue* added_key) override;
   virtual common::Error GetImpl(const NKey& key, NDbKValue* loaded_key) override;
