@@ -27,6 +27,7 @@ namespace forestdb {
 class DBConnection;
 struct CommandsApi : public internal::ApiTraits<DBConnection> {
   static common::Error Info(internal::CommandHandler* handler, commands_args_t argv, FastoObject* out);
+  static common::Error ConfigGet(internal::CommandHandler* handler, commands_args_t argv, FastoObject* out);
 };
 
 extern const internal::ConstantCommandsArray g_commands;
