@@ -38,7 +38,7 @@ class DBConnection : public core::internal::CDBConnection<NativeConnection, Conf
   typedef core::internal::CDBConnection<NativeConnection, Config, LMDB> base_class;
   explicit DBConnection(CDBConnectionClient* client);
 
-  std::string GetCurrentDBName() const;
+  virtual std::string GetCurrentDBName() const override;
   common::Error Info(const std::string& args, ServerInfo::Stats* statsout) WARN_UNUSED_RESULT;
   common::Error ConfigGetDatabases(std::vector<std::string>* dbs) WARN_UNUSED_RESULT;
 
